geographical_data/sass/versions/v0.9/README.md
# CCAMLR Special Areas for Scientific Study

version: v0.9

version date: 2023-08-15

CCAMLR can designate time-limited Special Areas for Scientific Study in newly exposed marine areas following ice-shelf retreat or collapse in the Antarctic Peninsula region. [Conservation Measure 24-04](https://cm.ccamlr.org/en/measure-24-04-2017) specifies that sites are initially designated for as a Stage 1 Special Area for Scientific Study which expires after a 2 two-year review period, unless the Commission agrees to progress the site to a Stage 2 Special Area for Scientific Study which which expires after a ten-year review period.

Currently there are two Special Areas for Scientific Study:

-   The Larsen C Stage 2 Special Area for Scientific Study which was designated on 27 October 2017 (CCAMLR-XXXVI paragraph 5.84).
-   The Pine Island Glacier Stage 1 Special Area for Scientific Study was designated on 11 August 2023.

This dataset consists of a shapefile containing the polygons of the CCAMLR Special Areas for Scientific Study.

## Data Citation

CCAMLR. 2023. Geographical data layer: CCAMLR Special Areas for Scientific Study. Version 0.9, URL: <https://github.com/ccamlr/data/tree/main/geographical_data/sass/versions/v0.9>.

## Licence

This dataset is licensed under a [CC0 license](/LICENSE.md)
