geographical_data/sass/versions/v0.10/README.md
# CCAMLR Special Areas for Scientific Study

version: v0.10

version date: 2025-09-19

CCAMLR can designate time-limited Special Areas for Scientific Study (SASS) in newly exposed marine areas following ice-shelf retreat or collapse in the Antarctic Peninsula region. [Conservation Measure 24-04](https://cm.ccamlr.org/en/measure-24-04-2017) specifies that sites are initially designated for as a Stage 1 Special Area for Scientific Study which expires after a 2 two-year review period, unless the Commission agrees to progress the site to a Stage 2 Special Area for Scientific Study which which expires after a ten-year review period.

**Currently Active Special Area for Scientific Study:**

-   The Larsen C Stage 2 SASS
    -   designated on 27 October 2017 (CCAMLR-XXXVI paragraph 5.84) and will expire on 27 October 2028 (Annex CM 24-04/B)

**Archived Special Area for Scientific Study:**

-   The Pine Island Glacier Stage 1 SASS
    -   Designated on 17 May 2019 ([COMM CIRC 19/53](https://circs.ccamlr.org/en/comm-19-53/sc-19-52)), 12 June 2021 ([COMM CIRC 21/76](https://circs.ccamlr.org/en/comm-21-76/sc-21-104)) and 11 August 2023 ([COMM CIRC 23/79](https://circs.ccamlr.org/en/comm-23-79/sc-23-80)).

This dataset consists of a shapefile containing the polygons of the CCAMLR Special Areas for Scientific Study. Currently active Special Areas for Scientific Study are identified as such in the 'ACTIVE' column.

## Data Citation

CCAMLR. 2025. Geographical data layer: CCAMLR Special Areas for Scientific Study. Version 0.10, URL: [https://github.com/ccamlr/data/tree/main/geographical_data/sass/versions/v0.](https://github.com/ccamlr/data/tree/main/geographical_data/sass/versions/v0.10){.uri}[10](https://github.com/ccamlr/data/tree/main/geographical_data/sass/versions/v0.10).

## Licence

This dataset is licensed under a [CC0 license](/LICENSE.md)
